src/test/ui/async-await/issue-64130-2-send.stderr
error[E0277]: `Foo` cannot be sent between threads safely
  --> $DIR/issue-64130-2-send.rs:21:5
   |
LL | fn is_send<T: Send>(t: T) { }
   |    -------    ---- required by this bound in `is_send`
...
LL |     is_send(bar());
   |     ^^^^^^^ `Foo` cannot be sent between threads safely
   |
   = help: within `impl std::future::Future`, the trait `std::marker::Send` is not implemented for `Foo`
   = note: required because it appears within the type `{Foo, impl std::future::Future, impl std::future::Future, ()}`
   = note: required because it appears within the type `[static generator@$DIR/issue-64130-2-send.rs:13:16: 16:2 {Foo, impl std::future::Future, impl std::future::Future, ()}]`
   = note: required because it appears within the type `std::future::GenFuture<[static generator@$DIR/issue-64130-2-send.rs:13:16: 16:2 {Foo, impl std::future::Future, impl std::future::Future, ()}]>`
   = note: required because it appears within the type `impl std::future::Future`
   = note: required because it appears within the type `impl std::future::Future`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
